--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <name>JaCoCoLog :: Maven Plugin</name>
   <description>The JaCoCoLog Maven Plugin provides the coverage goal to aggregate reports and log coverage probes.</description>
   <url>https://github.com/noetica-cloud/jacocolog-maven-plugin</url>
-  
+
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
@@ -134,6 +134,12 @@
       <version>1.7.36</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-verifier</artifactId>
+      <version>1.8.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
@@ -231,21 +237,27 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-invoker-plugin</artifactId>
         <version>3.6.0</version>
+        <configuration>
+          <projectsDirectory>${basedir}/src/test/integration</projectsDirectory>
+          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+          <cloneClean>true</cloneClean>
+          <pomIncludes>
+            <pomInclude>*/pom.xml</pomInclude>
+          </pomIncludes>
+          <addTestClassPath>true</addTestClassPath>
+          <postBuildHookScript>verify</postBuildHookScript>
+          <goals>
+            <goal>clean</goal>
+            <goal>verify</goal>
+          </goals>
+        </configuration>
         <executions>
           <execution>
-            <id>run-test-project</id>
+            <id>integration-test</id>
             <goals>
+              <goal>install</goal>
               <goal>run</goal>
             </goals>
-            <configuration>
-              <projectsDirectory>src/test/projects</projectsDirectory>
-              <pomIncludes>
-                <pomInclude>simple/pom.xml</pomInclude>
-              </pomIncludes>
-              <goals>
-                <goal>verify</goal>
-              </goals>
-            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -268,6 +280,19 @@
               </relocations>
               <minimizeJar>true</minimizeJar>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.sisu</groupId>
+        <artifactId>sisu-maven-plugin</artifactId>
+        <version>0.3.5</version>
+        <executions>
+          <execution>
+            <id>generate-index</id>
+            <goals>
+              <goal>main-index</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
