--- a/src/test/integration/inheritance/pom.xml
+++ b/src/test/integration/inheritance/pom.xml
@@ -4,10 +4,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>https://maven.apache.org</url>
+  <modules>
+    <module>childA</module>
+    <module>childB</module>
+  </modules>
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -39,6 +43,19 @@
             <id>default-prepare-agent</id>
             <goals>
               <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>@project.groupId@</groupId>
+        <artifactId>@project.artifactId@</artifactId>
+        <version>@project.version@</version>
+        <extensions>true</extensions>
+        <executions>
+          <execution>
+            <goals>
+              <goal>coverage</goal>
             </goals>
           </execution>
         </executions>
