--- a/src/test/integration/inheritance/pom.xml
+++ b/src/test/integration/inheritance/pom.xml
@@ -37,7 +37,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.10</version>
+        <version>0.8.12</version>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
@@ -52,6 +52,11 @@
         <artifactId>@project.artifactId@</artifactId>
         <version>@project.version@</version>
         <extensions>true</extensions>
+        <configuration>
+          <overall>
+            <enable>true</enable>
+          </overall>
+        </configuration>
         <executions>
           <execution>
             <goals>
