--- a/src/test/projects/configured-differently/pom.xml
+++ b/src/test/projects/configured-differently/pom.xml
@@ -44,17 +44,12 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>@project.groupId@</groupId>
-        <artifactId>@project.artifactId@</artifactId>
-        <version>@project.version@</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <goals>
-              <goal>coverage</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>cloud.noetica.jacocolog</groupId>
+        <artifactId>jacocolog-maven-plugin</artifactId>
+        <configuration>
+          <counters>CLASS,COMPLEXITY,INSTRUCTION</counters>
+          <digits>1</digits>
+        </configuration>
       </plugin>
     </plugins>
   </build>
