--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <artifactId>jacocolog-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
 
-  <version>1.0-ALPHA</version>
+  <version>1.0.0</version>
 
   <name>JaCoCoLog :: Maven Plugin</name>
   <description>The JaCoCoLog Maven Plugin provides the coverage goal to aggregate reports and log coverage probes.</description>
